build/log/idf_py_stdout_output_17544
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\Isaac\Documents\prog\IoT_sitemas_embebidos\2024\Programacion_de_SE\mqtt-tcp\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.1.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/build/bootloader/bootloader.bin"
Bootloader binary size 0x6820 bytes. 0x7e0 bytes (7%) free.
[2/9] Building C object esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj
FAILED: esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/build/config -IC:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/components/st7789/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/freertos/esp_additions/arch/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.1.2/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj -MF esp-idf\st7789\CMakeFiles\__idf_st7789.dir\st7789.c.obj.d -o esp-idf/st7789/CMakeFiles/__idf_st7789.dir/st7789.c.obj -c C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/components/st7789/st7789.c
C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/components/st7789/st7789.c:271:6: error: redefinition of 'lcdInit'
  271 | void lcdInit(TFT_t * dev, int width, int height, int offsetx, int offsety)
      |      ^~~~~~~
C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/components/st7789/st7789.c:75:6: note: previous definition of 'lcdInit' with type 'void(TFT_t *, int,  int,  int,  int)'
   75 | void lcdInit(TFT_t *dev, int width, int height, int offsetx, int offsety) {
      |      ^~~~~~~
C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/components/st7789/st7789.c:31:14: warning: 'local_dev' defined but not used [-Wunused-variable]
   31 | static TFT_t local_dev;
      |              ^~~~~~~~~
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
In file included from C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/main/app_main.c:36:
C:/Espressif/frameworks/esp-idf-v5.1.2/components/driver/deprecated/driver/mcpwm.h:15:2: warning: #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)" [-Wcpp]
   15 | #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)"
      |  ^~~~~~~
C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/main/app_main.c: In function 'access_handler':
C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/main/app_main.c:113:13: warning: this statement may fall through [-Wimplicit-fallthrough=]
  113 |             move_servo(0, 90, 40); // Mover el servo de regreso a 0 grados
      |             ^~~~~~~~~~~~~~~~~~~~~
C:/Users/Isaac/Documents/prog/IoT_sitemas_embebidos/2024/Programacion_de_SE/mqtt-tcp/main/app_main.c:114:9: note: here
  114 |         case 100:
      |         ^~~~
ninja: build stopped: subcommand failed.
